started new exercise, stuck at exercise 7. not sure if styling my divs correctly or not??

--- a/KURS1/HTML CSS JAVASCRIPT/Föreläsning 1 (16-9-2020)/övningar/css/main.css
+++ b/KURS1/HTML CSS JAVASCRIPT/Föreläsning 1 (16-9-2020)/övningar/css/main.css
@@ -4,3 +4,10 @@ table, th, td {
 
 
 }
+
+div {
+height: 500px;
+width: 500px;
+border: solid chocolate;
+float: left;
+}
